--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "cohelm-test",
+  "homepage": "http://tolicodes.github.io/cohelm-test",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
